About page complete

--- a/index.html
+++ b/index.html
@@ -6,30 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile-Share</title>
+    <script src="https://kit.fontawesome.com/5e4e22611c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+<!--Fisrt Page Start-->
     <section class="first_page">
+
         <navbar>
             <a href="#">About</a>
             <a href="#">Skill</a>
             <a href="#">Exprience</a>
             <a href="#">Contact</a>
         </navbar>
+
         <div class="summry">
             <div class="show1">
                 <img src="images/profilepic.jpg" alt="profile Pic">
             </div>
             <div class="show2">
-
+                <h3>Hello I'm</h3>
+                <h1>Shahria Sifat</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias necessitatibus reiciendis
+                    pariatur rem illum ratione et facere nemo exercitationem!</p>
+                <div class="social_logo">
+                    <a class ="f"href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="ff"href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="fff"href="https://twitter.com/" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a class="ff1"href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
     </section>
 
 
+<!--==============irst page ENd=====================-->
+
+<!--=========================About section Start=====================-->
+    <section class="about_me">
+
+        <div class="image">
+            <img src="images/profilepic.jpg" alt="">
+        </div>
+        <div class="text_part">
+            <h1>ABOUT ME</h1>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime inventore facere beatae magni similique qui nemo, sed ad minima veniam, vero voluptas? Nulla accusamus vel officia voluptatum reprehenderit voluptate dicta eligendi quis provident, quia optio animi impedit fuga exercitationem placeat ullam dolor ex vero obcaecati nemo sit iste reiciendis? Consectetur facere, non officia ut quasi natus exercitationem distinctio molestias sunt.</p>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
