Exprience part complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<!--Fisrt Page Start-->
+    <!--Fisrt Page Start-->
     <section class="first_page">
 
         <navbar>
@@ -34,19 +34,19 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias necessitatibus reiciendis
                     pariatur rem illum ratione et facere nemo exercitationem!</p>
                 <div class="social_logo">
-                    <a class ="f"href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="ff"href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a class="fff"href="https://twitter.com/" target="_blank"> <i class="fab fa-twitter"></i></a>
-                    <a class="ff1"href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="f" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="ff" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="fff" href="https://twitter.com/" target="_blank"> <i class="fab fa-twitter"></i></a>
+                    <a class="ff1" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
     </section>
 
 
-<!--==============irst page ENd=====================-->
+    <!--==============irst page ENd=====================-->
 
-<!--=========================About section Start=====================-->
+    <!--=========================About section Start=====================-->
     <section class="about_me">
 
         <div class="image">
@@ -55,7 +55,36 @@
         <div class="text_part">
             <h1>ABOUT ME</h1>
             <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime inventore facere beatae magni similique qui nemo, sed ad minima veniam, vero voluptas? Nulla accusamus vel officia voluptatum reprehenderit voluptate dicta eligendi quis provident, quia optio animi impedit fuga exercitationem placeat ullam dolor ex vero obcaecati nemo sit iste reiciendis? Consectetur facere, non officia ut quasi natus exercitationem distinctio molestias sunt.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime inventore facere beatae magni similique
+                qui nemo, sed ad minima veniam, vero voluptas? Nulla accusamus vel officia voluptatum reprehenderit
+                voluptate dicta eligendi quis provident, quia optio animi impedit fuga exercitationem placeat ullam
+                dolor ex vero obcaecati nemo sit iste reiciendis? Consectetur facere, non officia ut quasi natus
+                exercitationem distinctio molestias sunt.</p>
+            <a href="">Download Resume</a>
+        </div>
+
+    </section>
+
+
+    <!--==================ABout section end======================-->
+
+    <!--==================Skill Section Start===========================-->
+    <section class="exprience">
+        <h1>Exprience</h1>
+        <hr>
+        <div class="flex_part1">
+            <div class="card1">
+                <h2>Front-end Developer</h2>
+                <h4>2020-2021  |  Begininer level</h4>
+               <p>
+                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, ad praesentium, deserunt sapiente expedita placeat maiores eveniet esse exercitationem cupiditate doloribus, repellat itaque quasi dolorum deleniti corrupti culpa soluta rerum.
+               </p>
+            </div>
+            <div class="card2">
+                <h2>Web Developer</h2>
+                <h4>2021-2024  |  Pro Level</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, fuga sint eveniet ut mollitia, perferendis ad consequuntur accusamus eligendi natus, itaque enim distinctio possimus laborum et tempore! Quod, autem nobis.</p>
+            </div>
         </div>
 
     </section>
